More caption changes

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -58,6 +58,13 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "Quick message to confirm there was a connection"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "## 1. Data Overview\n",
                 "\n",
                 "List all tables and inspect row counts."
@@ -969,7 +976,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -983,6 +990,13 @@
             "source": [
                 "conn.close()\n",
                 "print('Done! Database connection closed.')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Message to confirm disconnect from SQLite"
             ]
         }
     ],
