--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -818,24 +818,14 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Run a RandomForestRegressor and then evaluate the model "
+                "Run a RandomForestRegressor... well 10,000 of them... and then evaluate the model "
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Random Forest Performance:\n",
-                        "  R² Score: 0.9711\n",
-                        "  MAE:      0.7566\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "\n",
                 "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -843,11 +833,11 @@
                 ")\n",
                 "\n",
                 "\n",
-                "rf = RandomForestRegressor(n_estimators=200, max_depth=15, random_state=42, n_jobs=-1)\n",
-                "rf.fit(X_train, y_train)\n",
+                "random_forrest = RandomForestRegressor(n_estimators=10000, max_depth=15, random_state=300, n_jobs=-1)\n",
+                "random_forrest.fit(X_train, y_train)\n",
                 "\n",
                 "\n",
-                "y_pred = rf.predict(X_test)\n",
+                "y_pred = random_forrest.predict(X_test)\n",
                 "r2 = r2_score(y_test, y_pred)\n",
                 "mae = mean_absolute_error(y_test, y_pred)\n",
                 "print(f'Random Forest Performance:')\n",
