Change captions and run more tests

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -849,6 +849,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "That takes over 10 minutes to run... run at your own risk.\n",
+                "\n",
                 "Find the best features and plot the results"
             ]
         },
