Leave warning message about n_estimators

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -822,6 +822,13 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "If you want to save your computer/time I recommend running something around 500 n_estimators, which will give a similar result but since it is a final I wanted to run 10k"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
