Fixed a few more things

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -8,9 +8,9 @@
                 "\n",
                 "## European Soccer Dataset – Player Contract Value Analysis\n",
                 "\n",
-                "**Goal:** I want to identify which player attributes are the most important drivers of a player's overall rating, which I will use as a proxy for player contract value.\n",
+                "**Goal:** I want to identify which player attributes are the most important in determining if a player warrants a high contract value.\n",
                 "\n",
-                "I am going touse the [European Soccer Database](https://www.kaggle.com/datasets/hugomathien/soccer) from Kaggle, which contains FIFA-sourced (EA Sports game) player attributes across 11 European leagues (2008–2016)."
+                "I am going to use the [European Soccer Database](https://www.kaggle.com/datasets/hugomathien/soccer) from Kaggle, which contains FIFA-sourced (EA Sports game) player attributes across 11 European leagues (2008–2016)."
             ]
         },
         {
@@ -799,7 +799,7 @@
                 "fig, ax = plt.subplots(figsize=(10, 8))\n",
                 "corr_with_target.plot.barh(ax=ax, color=sns.color_palette('viridis', len(corr_with_target)))\n",
                 "ax.set_xlabel('Pearson Correlation with Overall Rating')\n",
-                "ax.set_title('Feature Correlation with Overall Rating (Contract Value Proxy)')\n",
+                "ax.set_title('Feature Correlation with Overall Rating')\n",
                 "plt.tight_layout()\n",
                 "plt.show()"
             ]
@@ -855,9 +855,10 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "That takes over 24 minutes to run... run at your own risk.\n",
+                "That takes over 40 minutes to run... run at your own risk.\n",
                 "\n",
-                "Find the best features and plot the results"
+                "\n",
+                "Now, find the most important features and plot those results"
             ]
         },
         {
@@ -867,15 +868,15 @@
             "outputs": [],
             "source": [
                 "\n",
-                "importances = pd.Series(rf.feature_importances_, index=feature_cols)\n",
-                "importances = importances.sort_values(ascending=True)\n",
+                "important_features = pd.Series(rf.feature_importances_, index=feature_cols)\n",
+                "important_features = important_features.sort_values(ascending=True)\n",
                 "\n",
                 "fig, ax = plt.subplots(figsize=(10, 10))\n",
-                "importances.plot.barh(\n",
+                "important_features.plot.barh(\n",
                 "    ax=ax,\n",
                 "    color=sns.color_palette('magma', len(importances))\n",
                 ")\n",
-                "ax.set_xlabel('Feature Importance (Gini)')\n",
+                "ax.set_xlabel('Feature Importance (Random Forest)')\n",
                 "ax.set_title('What Drives Player Contract Value?\\n(Random Forest Feature Importance)')\n",
                 "plt.tight_layout()\n",
                 "plt.show()"
@@ -921,18 +922,21 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 6. Summary\n",
+                "## 7. Summary\n",
                 "\n",
-                "The analysis above identifies the player attributes that matter most for determining a player's overall rating — our stand-in for contract value. Key takeaways:\n",
+                "Above identifies and shows the player attributes that matter most for determining how worthy a player is of a high contract value. Key takeaways:\n",
                 "\n",
-                "- **Reactions, potential, and short passing** tend to rank among the top attributes driving overall rating.\n",
+                "- **Reactions, potential, and short passing** also tend to rank among the top attributes driving overall rating in FIFAs of the past.\n",
                 "- The Random Forest model achieves a high R² score, confirming that FIFA attributes collectively explain most of the variation in overall rating.\n",
                 "- The feature importance chart provides a clear ranking you can use to prioritise in contract negotiations.\n",
                 "\n",
                 "### Next steps\n",
                 "- Incorporate transfer fee / wage data from external sources to use actual contract values instead of the rating proxy.\n",
+                "    - I would need a different dataset that includes transfer fee amounts and current wage data\n",
                 "- Break down importance by playing position (GK vs. defender vs. forward).\n",
-                "- Time-series analysis: how attribute importance shifts across seasons."
+                "    - This could be tricky, since this is a little subjective I personally think defenders should be more valuable than they are, but the modern transfer market disagrees with me\n",
+                "- Time-series analysis: how attribute importance shifts across seasons.\n",
+                "    - Have certain positions become more valuable?"
             ]
         },
         {
