--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -702,7 +702,7 @@
             "source": [
                 "## 3. Prepare Feature Matrix\n",
                 "\n",
-                "We select the numeric FIFA attribute columns (everything except IDs, dates, and `preferred_foot` / `attacking_work_rate` / `defensive_work_rate`) and use `overall_rating` as our target variable — a proxy for contract value."
+                "We select the numeric FIFA attribute columns (everything except IDs, dates, and `preferred_foot` / `attacking_work_rate` / `defensive_work_rate`) and use `overall_rating` as our target variable for contract value."
             ]
         },
         {
@@ -810,7 +810,7 @@
             "source": [
                 "## 5. Random Forest Feature Importance\n",
                 "\n",
-                "Train a Random Forest regressor to predict `overall_rating` from all attributes, then extract feature importances to determine what matters most for player value."
+                "Time to train a Random Forest regressor to predict `overall_rating` from all attributes, then extract feature importances to determine what matters most for player value."
             ]
         },
         {
@@ -822,7 +822,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -838,13 +838,10 @@
             "source": [
                 "\n",
                 "X_train, X_test, y_train, y_test = train_test_split(\n",
-                "    X, y, test_size=0.2, random_state=42\n",
-                ")\n",
-                "\n",
+                "    X, y, test_size=0.2, random_state=42)\n",
                 "\n",
                 "random_forrest = RandomForestRegressor(n_estimators=1000, max_depth=15, random_state=300, n_jobs=-1)\n",
                 "random_forrest.fit(X_train, y_train)\n",
-                "\n",
                 "\n",
                 "y_pred = random_forrest.predict(X_test)\n",
                 "r2 = r2_score(y_test, y_pred)\n",
@@ -861,12 +858,12 @@
                 "That takes a little over 9 minutes to run\n",
                 "\n",
                 "\n",
-                "Now, find the most important features and plot those results"
+                "Now, I want to find the most important features and plot those results"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -881,7 +878,6 @@
                 }
             ],
             "source": [
-                "\n",
                 "important_features = pd.Series(random_forrest.feature_importances_, index=feature_cols)\n",
                 "important_features = important_features.sort_values(ascending=True)\n",
                 "\n",
@@ -900,7 +896,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "What are the top 10 most important attributes to get a contract?"
+                "So, what are the top 10 most important attributes to get a contract?"
             ]
         },
         {
@@ -929,7 +925,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This is really funny, because since the data is from FIFA (a videogame) the model is valuing goalkeepers and players with 'high potential'. Young players in the game will have much higher potentials than the average player in the FIFA database. Young players in the videogame are given 4-6 year long contracts, so when it compares that to the 33 year old players who are free agents or have one year remaining on their contract will skew the data. In real life, goalkeepers are not the highest priority for contracts in a club. Goalkeepers hit their 'prime' at a later time in their career compared to other positional players, so they will be given shorter term contracts in order to leave room for change at the position.  "
+                "This is really funny, because since the data is from FIFA (a videogame) the model is valuing goalkeepers and players with 'high potential'. Young players in the game will have much higher potentials than the average 29 year old player in the FIFA database. Young players in the videogame are given 4-6 year long contracts in an attempt to keep them long term, so when it compares that to the 33 year old players who are free agents or have one year remaining on their contract will skew the data. In real life, goalkeepers are not the highest priority for contracts for a club. Goalkeepers hit their 'prime' at a later time in their career compared to other positional players, so they will be given shorter term contracts in order to leave room for change at the position.  "
             ]
         },
         {
