Changed code and made changes to captions

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -706,7 +706,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -722,18 +722,13 @@
                 "\n",
                 "exclude_cols = [\n",
                 "    'id', 'player_fifa_api_id', 'player_api_id', 'date',\n",
-                "    'preferred_foot', 'attacking_work_rate', 'defensive_work_rate'\n",
-                "]\n",
-                "\n",
-                "target = 'overall_rating'\n",
+                "    'preferred_foot', 'attacking_work_rate', 'defensive_work_rate']\n",
                 "\n",
                 "feature_cols = [\n",
                 "    c for c in player_attrs.columns\n",
                 "    if c not in exclude_cols and c != target\n",
-                "    and player_attrs[c].dtype in ['int64', 'float64']\n",
-                "]\n",
+                "    and player_attrs[c].dtype in ['int64', 'float64']]\n",
                 "\n",
-                "print(f'Target: {target}')\n",
                 "print(f'Features ({len(feature_cols)}): {feature_cols}')"
             ]
         },
@@ -746,7 +741,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -760,7 +755,7 @@
             "source": [
                 "\n",
                 "dataset = player_attrs[feature_cols + [target]].dropna()\n",
-                "print(f'Clean rows: {len(dataset):,} (dropped {len(player_attrs) - len(dataset):,} with NaNs)')\n",
+                "print(f'Found {len(dataset):,} clean rows (dropped {len(player_attrs) - len(dataset):,} with Null values)')\n",
                 "\n",
                 "X = dataset[feature_cols]\n",
                 "y = dataset[target]"
@@ -772,12 +767,12 @@
             "source": [
                 "## 4. Correlation Heatmap\n",
                 "\n",
-                "Visualise how the features correlate with each other and with `overall_rating`."
+                "Visualise how the features correlate with each other and with `overall_rating` which is a player stat from the Fifa videogame (Messi & Ronaldo are the highest overall)."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -793,12 +788,12 @@
             ],
             "source": [
                 "\n",
-                "corr_with_target = X.corrwith(y).sort_values(ascending=False)\n",
+                "corr = X.corrwith(y).sort_values(ascending=False)\n",
                 "\n",
                 "fig, ax = plt.subplots(figsize=(10, 8))\n",
-                "corr_with_target.plot.barh(ax=ax, color=sns.color_palette('viridis', len(corr_with_target)))\n",
-                "ax.set_xlabel('Pearson Correlation with Overall Rating')\n",
-                "ax.set_title('Feature Correlation with Overall Rating')\n",
+                "corr.plot.barh(ax=ax, color=sns.color_palette('viridis', len(corr)))\n",
+                "ax.set_xlabel('Pearson Correlation with Overall Player Rating')\n",
+                "ax.set_title('Feature Correlation with Overall Player Rating')\n",
                 "plt.tight_layout()\n",
                 "plt.show()"
             ]
@@ -809,7 +804,7 @@
             "source": [
                 "## 5. Random Forest Feature Importance\n",
                 "\n",
-                "Time to train a Random Forest regressor to predict `overall_rating` from all attributes, then extract feature importances to determine what matters most for player value."
+                "Time to train a Random Forest regressor to predict `overall_rating` from all attributes, then extract important features in determining what matters most for player value."
             ]
         },
         {
