--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -16,16 +16,18 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "#All the packages you need\n",
                 "import pandas as pd \n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
                 "\n",
-                "## Below are from my scraper I created using the other attached python file\n",
-                "# My player data set \n",
+                "##Below are from my scraper I created using the other attached python file\n",
+                "\n",
+                "#Where I have my player data set \n",
                 "player_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/player_scraped_data.csv\")\n",
                 "print(player_data.columns)\n",
                 "\n",
-                "# My team data set \n",
+                "#Where I have my team data set \n",
                 "team_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/understat_teams_data.csv\")\n",
                 "print(team_data.columns)"
             ]
@@ -43,17 +45,17 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# First, let's look at the highest point finishers across the last 10 seasons in each league.\n",
+                "#First, let's look at the highest point finishers across the last 10 seasons in each league.\n",
                 "top_10_teams = team_data.sort_values(\"points\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize=(10, 6))\n",
                 "ax = sns.scatterplot(data=top_10_teams, x=\"league\", y=\"points\", hue=\"season\", s=150)\n",
                 "\n",
-                "# Label each dot w/associated team name\n",
+                "#Label each dot w/associated team name\n",
                 "for _, row in top_10_teams.iterrows():\n",
                 "    ax.text(\n",
                 "        row[\"league\"],\n",
-                "        row[\"points\"] + 0.5,    # slightly above the dot\n",
+                "        row[\"points\"] + 0.5,  #Places the name\n",
                 "        row[\"team\"],\n",
                 "        ha=\"center\",\n",
                 "        va=\"bottom\",\n",
@@ -79,13 +81,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Now, I want to print the best players by xG \n",
+                "#Now, I want to print the best players by xG \n",
                 "top_10_xG = player_data.sort_values(\"xg\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize=(10, 6))\n",
                 "az = sns.scatterplot(data=top_10_xG, x=\"league\", y=\"xg\", hue=\"season\", s=150)\n",
                 "\n",
-                "# Label each dot w/associated player name\n",
+                "#Label each dot w/associated player name\n",
                 "for _, row in top_10_xG.iterrows():\n",
                 "    az.text(\n",
                 "        row[\"league\"],\n",
@@ -115,13 +117,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Top 10 best chance creators \n",
+                "#Top 10 best chance creators \n",
                 "top_10_xA = player_data.sort_values(\"xa\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize= (10, 6))\n",
                 "ay = sns.scatterplot(data= top_10_xA, x=\"league\", y=\"xa\", hue=\"season\", s=150)\n",
                 "\n",
-                "# Label each dot w/associated player name\n",
+                "#Label each dot w/associated player name\n",
                 "for _, row in top_10_xA.iterrows():\n",
                 "    ay.text(\n",
                 "        row[\"league\"],\n",
