--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -21,7 +21,7 @@
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
                 "\n",
-                "##Below are from my scraper I created using the other attached python file\n",
+                "#Below are from my scraper (unstructured_scraper_final.py [within this github repository]) I created using the other attached python file\n",
                 "\n",
                 "#Where I have my player data set \n",
                 "player_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/player_scraped_data.csv\")\n",
@@ -40,12 +40,19 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "86615882",
+            "metadata": {},
+            "source": [
+                "I wanted to see which teams finished with the most amount of points across the 10 seasons. "
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
-                "#First, let's look at the highest point finishers across the last 10 seasons in each league.\n",
                 "top_10_teams = team_data.sort_values(\"points\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize=(10, 6))\n",
@@ -76,12 +83,19 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "bf561317",
+            "metadata": {},
+            "source": [
+                "The following visual is here to show the best players by xG (they put lots of shots on target from dangerous areas on the field)"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
-                "#Now, I want to print the best players by xG \n",
                 "top_10_xG = player_data.sort_values(\"xg\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize=(10, 6))\n",
@@ -112,12 +126,19 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "838491a2",
+            "metadata": {},
+            "source": [
+                "Now, I want to show who were the best chance creators across the timeframe that was scraped."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
-                "#Top 10 best chance creators \n",
                 "top_10_xA = player_data.sort_values(\"xa\", ascending=False).head(10)\n",
                 "\n",
                 "plt.figure(figsize= (10, 6))\n",
