Some more changes to the code

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -87,7 +87,9 @@
             "id": "bf561317",
             "metadata": {},
             "source": [
-                "The following visual is here to show the best players by xG (they put lots of shots on target from dangerous areas on the field)"
+                "The following visual is here to show the best players by xG (they put lots of shots on target from dangerous areas on the field)\n",
+                "\n",
+                "I used the same code to print player names next to their stats so it was obvious who it is and what season they accomplished the feat."
             ]
         },
         {
@@ -101,7 +103,7 @@
                 "plt.figure(figsize=(10, 6))\n",
                 "az = sns.scatterplot(data=top_10_xG, x=\"league\", y=\"xg\", hue=\"season\", s=150)\n",
                 "\n",
-                "#Label each dot w/associated player name\n",
+                "\n",
                 "for _, row in top_10_xG.iterrows():\n",
                 "    az.text(\n",
                 "        row[\"league\"],\n",
