Still in progress

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -14,7 +14,24 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Index(['season', 'league', 'player', 'team', 'position', 'games', 'minutes',\n",
+                        "       'goals', 'assists', 'shots', 'key_passes', 'yellow_cards', 'red_cards',\n",
+                        "       'non_penalty_goals', 'xg', 'xa', 'npxg', 'xg_chain', 'xg_buildup',\n",
+                        "       'goals_per90', 'assists_per90', 'xg_per90', 'xa_per90',\n",
+                        "       'goal_contributions', 'xg_overperformance'],\n",
+                        "      dtype='object')\n",
+                        "Index(['season', 'league', 'position', 'team', 'points', 'games_played',\n",
+                        "       'wins', 'draws', 'losses', 'goals_scored', 'goals_conceded',\n",
+                        "       'goal_diff', 'xg', 'xga', 'xg_diff'],\n",
+                        "      dtype='object')\n"
+                    ]
+                }
+            ],
             "source": [
                 "#All the packages you need\n",
                 "import pandas as pd \n",
@@ -27,10 +44,18 @@
                 "player_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/player_scraped_data.csv\")\n",
                 "print(player_data.columns)\n",
                 "\n",
-                "#Where I have my team data set \n",
+                "#Where I have my team data set & a print of columns (for my own sanity)\n",
                 "team_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/understat_teams_data.csv\")\n",
                 "print(team_data.columns)"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "9e53c1be",
+            "metadata": {},
+            "outputs": [],
+            "source": []
         },
         {
             "cell_type": "markdown",
@@ -62,7 +87,7 @@
                 "for _, row in top_10_teams.iterrows():\n",
                 "    ax.text(\n",
                 "        row[\"league\"],\n",
-                "        row[\"points\"] + 0.5,  #Places the name\n",
+                "        row[\"points\"] + 0.5,\n",
                 "        row[\"team\"],\n",
                 "        ha=\"center\",\n",
                 "        va=\"bottom\",\n",
@@ -102,7 +127,6 @@
                 "\n",
                 "plt.figure(figsize=(10, 6))\n",
                 "az = sns.scatterplot(data=top_10_xG, x=\"league\", y=\"xg\", hue=\"season\", s=150)\n",
-                "\n",
                 "\n",
                 "for _, row in top_10_xG.iterrows():\n",
                 "    az.text(\n",
@@ -146,7 +170,6 @@
                 "plt.figure(figsize= (10, 6))\n",
                 "ay = sns.scatterplot(data= top_10_xA, x=\"league\", y=\"xa\", hue=\"season\", s=150)\n",
                 "\n",
-                "#Label each dot w/associated player name\n",
                 "for _, row in top_10_xA.iterrows():\n",
                 "    ay.text(\n",
                 "        row[\"league\"],\n",
@@ -161,6 +184,16 @@
                 "plt.ylabel(\"xA at Season End\")\n",
                 "plt.legend(title=\"Season\", loc=\"upper right\")\n",
                 "plt.show()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "2a91c6b8",
+            "metadata": {},
+            "source": [
+                "In the future:\n",
+                "\n",
+                "I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. "
             ]
         }
     ],
@@ -180,7 +213,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.0"
+            "version": "3.11.0"
         }
     },
     "nbformat": 4,
