--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -34,6 +34,7 @@
             ],
             "source": [
                 "#All the packages you need\n",
+                "\n",
                 "import pandas as pd \n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
@@ -50,12 +51,12 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "9e53c1be",
+            "cell_type": "markdown",
+            "id": "3c86c81d",
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "source": [
+                "For this project I want to show the best teams, goal scorers and chance creators (highest expected assist rate) across ten seasons. \n"
+            ]
         },
         {
             "cell_type": "markdown",
