Edited some writing

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -167,8 +167,7 @@
                 "\n",
                 "Edin Dzeko was 30 years old on an AS Roma team that prided itself on crosses into the box, and he was the perfect player for that role. He made his money by sitting in the box being the 'old school' striker that pounces on any chance he got. Serie A is known as a defense heavy league, so for a striker from that league to have made it in the top 10 might need to be weighted more than Ligue 1. \n",
                 "\n",
-                "Robert Lewandowski scored a record breaking 35 Bundesliga goals during the 2021/2022 campaign and won the European Golden Boot (top goalscorer in European leagues) he was then rewarded with a move to FC Barcelona in the summer following that season. He is listed here from multiple seasons, and was a dominant striker during his time at FC Bayern Munich. \n",
-                "\n"
+                "Robert Lewandowski scored a record breaking 35 Bundesliga goals during the 2021/2022 campaign and won the European Golden Boot (top goalscorer in European leagues) he was then rewarded with a move to FC Barcelona in the summer following that season. He is listed here from multiple seasons, and was a dominant striker during his time at FC Bayern Munich. \n"
             ]
         },
         {
@@ -218,9 +217,9 @@
             "id": "2a91c6b8",
             "metadata": {},
             "source": [
-                "In the future:\n",
+                "## In the future:\n",
                 "\n",
-                "I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. "
+                "Besides gatherint the La Liga data and figuring out that issue, I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats."
             ]
         }
     ],
