Edited in the future section

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -219,7 +219,7 @@
             "source": [
                 "## In the future:\n",
                 "\n",
-                "Besides gatherint the La Liga data and figuring out that issue, I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats."
+                "Besides gathering the La Liga data and figuring out that issue, I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats. I would need to create some sort of model to predict future player performance based on previous stats and what league they are playing in. Since I have already figured out how to scrape individual player data, I just need to connect individual player data to their current and previous contracts to get my first steps."
             ]
         }
     ],
