Clean up comments

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -11,8 +11,16 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "cfbf0a2d",
+            "metadata": {},
+            "source": [
+                "All the packages you need to create the visualizations as well as where data is stored"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -33,19 +41,14 @@
                 }
             ],
             "source": [
-                "#All the packages you need\n",
-                "\n",
                 "import pandas as pd \n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
                 "\n",
-                "#Below are from my scraper (unstructured_scraper_final.py [within this github repository]) I created using the other attached python file\n",
                 "\n",
-                "#Where I have my player data set \n",
                 "player_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/player_scraped_data.csv\")\n",
                 "print(player_data.columns)\n",
                 "\n",
-                "#Where I have my team data set & a print of columns (for my own sanity)\n",
                 "team_data = pd.read_csv(\"C:/users/eganb/Downloads/soccer_data/understat_teams_data.csv\")\n",
                 "print(team_data.columns)"
             ]
