--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -185,7 +185,7 @@
             "id": "f67c6841",
             "metadata": {},
             "source": [
-                "Erling Haaland being on here twice proves that he might just be worth his hefty pricetag of £500,000 per week. Yes you read that right he makes £1,000,000 every two weeks he has a pulse during his current project. \n",
+                "Erling Haaland being on here twice proves that he might just be worth his hefty pricetag of £500,000 per week. Yes you read that right he makes £1,000,000 every two weeks he has a pulse during his current project. At just 25 years old he has 107 Premier League goals in only 4 seasons and he shows absolutely no signs of slowing down. \n",
                 "\n",
                 "Edin Dzeko was 30 years old on an AS Roma team that prided itself on crosses into the box, and he was the perfect player for that role. He made his money by sitting in the box being the 'old school' striker that pounces on any chance he got. Serie A is known as a defense heavy league, so for a striker from that league to have made it in the top 10 might need to be weighted more than Ligue 1. \n",
                 "\n",
