Edited some comments in the scraper

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -55,6 +55,14 @@
         },
         {
             "cell_type": "markdown",
+            "id": "74591308",
+            "metadata": {},
+            "source": [
+                "Quick sanity check by printing out the columns so I can see all that is from my datasets. "
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "3c86c81d",
             "metadata": {},
             "source": [
@@ -209,7 +217,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
