Updated file and visualizations

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -20,7 +20,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
@@ -88,7 +88,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [
                 {
@@ -152,7 +152,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -217,7 +217,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [
                 {
@@ -260,7 +260,7 @@
             "source": [
                 "## In the future:\n",
                 "\n",
-                "Besides gathering the La Liga data and figuring out that issue, I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats. I would need to create some sort of model to predict future player performance based on previous stats and what league they are playing in. Since I have already figured out how to scrape individual player data, I just need to connect individual player data to their current and previous contracts to get my first steps."
+                "I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats. I would need to create some sort of model to predict future player performance based on previous stats and what league they are playing in. Since I have already figured out how to scrape individual player data, I just need to connect individual player data to their current and previous contracts to get my first steps."
             ]
         }
     ],
