Final caption edits

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -152,7 +152,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -198,6 +198,14 @@
                 "Edin Dzeko was 30 years old on an AS Roma team that prided itself on crosses into the box, and he was the perfect player for that role. He made his money by sitting in the box being the 'old school' striker that pounces on any chance he got. Serie A is known as a defense heavy league, so for a striker from that league to have made it in the top 10 might need to be weighted more than Ligue 1. \n",
                 "\n",
                 "Robert Lewandowski scored a record breaking 35 Bundesliga goals during the 2021/2022 campaign and won the European Golden Boot (top goalscorer in European leagues) he was then rewarded with a move to FC Barcelona in the summer following that season. He is listed here from multiple seasons, and was a dominant striker during his time at FC Bayern Munich. \n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "2fa2798d",
+            "metadata": {},
+            "source": [
+                "The 4 sets of names who are overlapping are (31 goals) Robert Lewandowski & Pierre-Emerick Aubameyang and (33 goals) Robert Lewandowski & Harry Kane "
             ]
         },
         {
